CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT("love-nuklear")

SET(LIB_NAME "nuklear")

set ( SOURCE_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )

add_library(
	"${LIB_NAME}"
	STATIC
	${SOURCE_ROOT}/src/nuklear/nuklear.h
	${SOURCE_ROOT}/src/wrap_Nuklear.cpp
	${SOURCE_ROOT}/src/Nuklear.cpp
)

TARGET_INCLUDE_DIRECTORIES(
	"${LIB_NAME}" PUBLIC
	${PLUGIN_MODULE_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(
	"${LIB_NAME}"
	${LOVE_LUA_LIBRARY}
)

SET_TARGET_PROPERTIES("${LIB_NAME}" PROPERTIES PREFIX "")
